--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["restaurantApp/src/App.js","restaurantApp/src/components/Restro/index.css","restaurantApp/src/index.js","restaurantApp/src/App.css"],"fileToBeOpened":"restaurantApp/src/components/Restro/index.js"}
+{"ignoredFilesOrFolders":[],"openFiles":["restaurantApp/src/App.js","restaurantApp/src/index.js","restaurantApp/src/App.css","restaurantApp/src/components/Restro/index.js"],"fileToBeOpened":"restaurantApp/src/components/Restro/index.css"}
